--- a/poc-spotify-front-end/src/components/musicPlayer/audioControls/audioControls.css
+++ b/poc-spotify-front-end/src/components/musicPlayer/audioControls/audioControls.css
@@ -1,3 +1,10 @@
+.audio-controls {
+  display: flex;
+  align-items: center;
+  width: 125px;
+  margin-left: auto;
+}
+
 .audio-controls__mute-btn {
   background-color: transparent;
   border: none;
