--- a/poc-spotify-front-end/src/App.css
+++ b/poc-spotify-front-end/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+.App__top-content {
+  display: flex;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
